%% Customer lifecycle aggregate diagram.
%% Source of truth: ../customer.md
%% This file physically copies only the lifecycle slice.
%% External entities are referenced by links only and remain defined in the
%% source schema until their own detailed diagram files are populated.

classDiagram
    direction LR

    %% Customer lifecycle aggregate
    class Customer {
        <<AggregateRoot>>
        -CustomerId id
        -CustomerStatus status
        -DateTime~Utc~ created_at
        -DateTime~Utc~ updated_at
        -AggregateVersion version
        -Vec~PendingCustomerEvent~ pending_events
        +create(id, now) Customer
        +activate(permit, ctx) Result~ChangeOutcome, CustomerError~
        +suspend(reason, ctx) Result~ChangeOutcome, CustomerError~
        +restore(reason, ctx) Result~ChangeOutcome, CustomerError~
        +block(reason, ctx) Result~ChangeOutcome, CustomerError~
        +reduce_block_to_suspension(reason, ctx) Result~ChangeOutcome, CustomerError~
        +unblock(reason, ctx) Result~ChangeOutcome, CustomerError~
        +delete(reason, ctx) Result~ChangeOutcome, CustomerError~
    }

    class CustomerStatus {
        <<EnumStateMachine>>
        Draft
        Active
        Suspended(Suspension)
        Blocked(Block)
        Deleted(Deletion)
    }

    %% Invariants belong to domain model, not DTO validation.
    %% Aggregate must protect its own local invariants.
    %% No-op commands must not create domain events.
    %% NoChange does not update updated_at or increment AggregateVersion.
    %% NoChange does not emit DomainEvent.
    class CustomerInvariants {
        <<Invariants>>
        deleted_is_terminal
        Draft_activates_via_activate
        Suspended_returns_via_restore
        suspend_only_from_Active
        block_only_from_Active_or_Suspended
        reduce_Blocked_to_Suspended_explicitly
        unblock_Blocked_to_Active_only_via_unblock
        lifecycle_change_requires_ActionContext
        critical_change_requires_reason_and_actor
        Changed_updates_updated_at_and_version
        NoChange_updates_nothing_and_emits_nothing
    }

    class CustomerActivationError {
        <<DomainError>>
        ActivationPermitExpired
        ActivationPermitCustomerMismatch
        ActivationPermitCustomerVersionMismatch
        CustomerStatusDoesNotAllowActivation
    }

    class CustomerError {
        <<DomainErrorEnum>>
        Activation(CustomerActivationError)
        OtherCustomerDomainError
    }

    Customer ..> CustomerInvariants : activate suspend restore block reduce_block unblock delete
    Customer ..> DomainResult : command result
    Customer *-- CustomerStatus
    Customer ..> ActionContext : command context
    Customer ..> ActivationPermit : activation requires
    Customer ..> CustomerEvent : raises
    Customer *-- "0..*" PendingCustomerEvent : records immutable copy
    Customer ..> CustomerError : returns
    CustomerError *-- CustomerActivationError : wraps
    Customer ..> ActivationInvariants : validates permit locally in activate

    style Customer fill:#1D4ED8,stroke:#1E3A8A,stroke-width:3px,color:#FFFFFF
    style CustomerStatus fill:#F3E8FF,stroke:#7E22CE,color:#0F172A
    style CustomerActivationError fill:#FEE2E2,stroke:#DC2626,color:#0F172A
    style CustomerError fill:#FEE2E2,stroke:#DC2626,color:#0F172A
    style CustomerInvariants fill:#FCE7F3,stroke:#DB2777,color:#0F172A
    style ActionContext fill:#F1F5F9,stroke:#64748B,stroke-dasharray:5 5,color:#0F172A
    style ActivationInvariants fill:#F1F5F9,stroke:#64748B,stroke-dasharray:5 5,color:#0F172A
    style ActivationPermit fill:#F1F5F9,stroke:#64748B,stroke-dasharray:5 5,color:#0F172A
    style CustomerEvent fill:#F1F5F9,stroke:#64748B,stroke-dasharray:5 5,color:#0F172A
    style DomainResult fill:#F1F5F9,stroke:#64748B,stroke-dasharray:5 5,color:#0F172A
    style PendingCustomerEvent fill:#F1F5F9,stroke:#64748B,stroke-dasharray:5 5,color:#0F172A
